# little-coral-terminal-game

./: Cargo.toml  README.md
assets/stamps/: stamp1.txt  stamp10.txt  stamp11.txt  stamp12.txt  stamp2.txt  stamp3.txt  stamp4.txt  stamp5.txt  stamp6.txt  stamp7.txt  stamp8.txt  stamp9.txt
src/: assets.rs  constants.rs  controller.rs  conway_rules.rs  coral.rs  main.rs  model.rs  player.rs  rulebook.rs  rules.rs  stamps.rs  view.rs
